--- a/style.css
+++ b/style.css
@@ -239,7 +239,10 @@ h2::after {
   font-weight: 600;
   transition: 0.3s ease;
 }
-
+#contact-links a:hover {
+  color: #FFD700; /* brighter gold on hover */
+  transform: scale(1.2);
+}
 .contact-form button:hover {
   background: #ffcc00;
   transform: scale(1.05);
